# Vkgram

./: CMakeLists.txt  README.md
docs/: concurrency.md  database.md  general.md  network.md
lib/: CMakeLists.txt
lib/concurrency/: CMakeLists.txt
lib/concurrency/coro/: core.cpp  core.hpp  routine.hpp  simple.hpp
lib/concurrency/executors/: executor.hpp  hint.hpp  inline.cpp  inline.hpp  submit.hpp  task.hpp  thread_pool.hpp
lib/concurrency/executors/tp/compute/: thread_pool.cpp  thread_pool.hpp
lib/concurrency/executors/tp/compute/support/: intrusive_queue.hpp  wait_group.hpp
lib/concurrency/executors/tp/fast/: config.hpp  coordinator.cpp  coordinator.hpp  thread_pool.cpp  thread_pool.hpp  worker.cpp  worker.hpp
lib/concurrency/executors/tp/fast/queues/: global_queue.hpp  work_stealing_queue.hpp
lib/concurrency/fibers/core/: awaiter.hpp  fiber.cpp  fiber.hpp  fwd.hpp  handle.cpp  handle.hpp  routine.hpp  scheduler.hpp
lib/concurrency/fibers/sched/: go.cpp  go.hpp  suspend.cpp  suspend.hpp  yield.cpp  yield.hpp
lib/concurrency/fibers/sync/: event.hpp  mutex.hpp  wait_group.hpp
lib/concurrency/fibers/sync/support/: mutex_waiting_queue.hpp
lib/concurrency/futures/: futures.hpp
lib/concurrency/futures/callback/: callback.hpp
lib/concurrency/futures/combine/par/: all.hpp  first.hpp
lib/concurrency/futures/combine/seq/: and_then.hpp  flat_map.hpp  flatten.hpp  map.hpp  or_else.hpp  via.hpp
lib/concurrency/futures/make/: contract.hpp  failure.hpp  just.hpp  submit.hpp  value.hpp
lib/concurrency/futures/state/: shared_state.hpp
lib/concurrency/futures/syntax/: both.hpp  or.hpp  pipe.hpp
lib/concurrency/futures/terminate/: await.hpp  detach.hpp  get.hpp
lib/concurrency/futures/traits/: value_of.hpp
lib/concurrency/futures/types/: future.hpp
lib/concurrency/result/: result.hpp
lib/concurrency/result/make/: err.hpp  ok.hpp
lib/concurrency/result/traits/: value_of.hpp
lib/concurrency/result/types/: error.hpp  result.hpp  status.hpp  unit.hpp
src/: CMakeLists.txt  client_main.cpp  server_main.cpp
src/buffers/: buffer.h  request.cpp  request.h  responce.cpp  response.h
src/client/: client.cpp  client.h  client_network.cpp  client_network.hpp
src/database/: database_config.h  docker-compose.yml  vkgram_db_ddl.sql  vkgram_db_requests.h
src/errors/: errors.h
src/interface/: QtInterface.cpp  QtInterface.hpp
src/messanger/: message.h  user.h
src/server/: config.h  request_handler.cpp  requests_handler.h  server.cpp  server.h  server_database_module.cpp  server_database_module.h
